Add back decision impl
Signed-off-by: subhramit <subhramit.bb@live.in>